--- a/base/trunk/client/mobitracer/build.properties
+++ b/base/trunk/client/mobitracer/build.properties
@@ -1,13 +1,17 @@
 project.name=mobitracer
 
+# preverify command location: CHANGE e.g. to WTK IF NOT BUILDING ON MAC OSX
+preverify.cmd=${mppsdk.dir}/osx/preverify/preverify
+
 # Standard MIDlet properties to be substituted in MANIFEST.MF and .jad.template
 midlet.name=MobiTracer
 midlet.class=org.geotracing.client.MobiTracer
 midlet.icon=/app.png
-midlet.version=3.4.1
+midlet.version=3.5.0
 midlet.vendor=Just Objects
 midlet.info.url=http://www.justobjects.nl
 midlet.cldc=CLDC-1.0
 midlet.midp=MIDP-2.0
 midlet.permissions=javax.microedition.io.Connector.http
 midlet.permissions.opt=javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot
+
