jgps: fixed gmap keys for multiple hosts

--- a/app/jgps/trunk/server/build.properties
+++ b/app/jgps/trunk/server/build.properties
@@ -14,7 +14,7 @@ gt.dir=${basedir}/../../../../base/trunk
 gt.war.dir=${gt.dir}/server/build/war
 
 # specify the directory for your (tomcat) webapps
-deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
+deploy.local.dir=/var/keyworx/webapps
 # deploy.pundit.dir=/Volumes/homes/httpd/geotracing.com
 
 
