--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -24,5 +24,6 @@ keyworx.log.level=INFO
 diwi.routegenerator.url=http://local.diwi.nl/diwi/test.jsp
 kich.post.url=http://local.diwi.nl/diwi/kich.jsp
 kich.rest.url=http://local.diwi.nl/diwi/rest.jsp
+routing.servlet.url=http://www.groene-omgeving.nl:8080/diwirouting/RoutingServlet
 
 
