--- a/app/diwi/trunk/server/test/protocol/test.properties
+++ b/app/diwi/trunk/server/test/protocol/test.properties
@@ -1,9 +1,11 @@
 # properties for protocol test  client
+#host=berlin
 host=localhost
 
 # must match port in portal.xml for local test
 port=5515
 script.dir=script
 result.dir=/var/keyworx/webapps/local.diwi.nl/rsc/test
+#result.dir=/var/keyworx/webapps/diwi/rsc/test
 suite=script/suite.xml
 
