--- a/base/trunk/client/mobitracer/etc/mt.properties
+++ b/base/trunk/client/mobitracer/etc/mt.properties
@@ -1,7 +1,9 @@
 # pundit.url=www.geotracing.com/gt
 # sumatra.url=test.geotracing.com/gt
 mt.options=full
-gps.sample.interval=12000
+gps.sample.interval=5000
+gps.send.interval=25000
+
 
 
 
