jgps: start of location app to manage locations/media

--- a/app/jgps/trunk/server/webapp/ota/mt.properties
+++ b/app/jgps/trunk/server/webapp/ota/mt.properties
@@ -1,4 +1,5 @@
-gps.sample.interval=15000
+gps.sample.interval=5000
+gps.send.interval=25000
 
 # instructs MT to use the minimum:
 # tracks per day and just quit
