New REST requests, DIWIQueryHandler + test page

--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -246,6 +246,12 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			 </fileset>
 		 </copy>
 
+		<!-- Copy relevant GeoTracing JSP -->	
+		<copy todir="${build.war.dir}/srv/" overwrite="true">
+			 <fileset dir="${geotracing.server.dir}/webapp/gt/srv">
+			 </fileset>
+		 </copy>
+
 		<!-- until kwx plugins truly work in KeyWorx copy the jars and tables to get things working-->
 		 <copy todir="${build.war.dir}/WEB-INF/cfg/tables" overwrite="true">
 			 <fileset dir="${kwx-metadata.dir}/cfg/tables">
