wnp: initial revision

--- a/app/walkandplay/trunk/server/build.properties
+++ b/app/walkandplay/trunk/server/build.properties
@@ -5,6 +5,12 @@ project.name=WP
 project.id=wp
 version=1.0.0
 
+# your PATH must point to the bin where the Jikes compiler is
+# build.compiler=jikes
+javac.debug=false
+javac.deprecation=false
+javac.optimize=true
+
 war.name=wp
 
 # specify the directory of the GeoTracing unpacked .war archive
