--- a/app/walkandplay/trunk/server/test/cfg/test.properties
+++ b/app/walkandplay/trunk/server/test/cfg/test.properties
@@ -1,8 +1,8 @@
 # standard properties file
 # host=test.waag.org
 host=127.0.0.1
-port=6051
+port=6050
 script.dir=../protocol
-result.dir=/var/keyworx/webapps/test.walkandplay.com/wptest/test/protocol
+result.dir=/var/keyworx/webapps/walkandplay/wptest/test/protocol
 suite=../protocol/suite.xml
 
