wnp: get things working again

--- a/app/walkandplay/trunk/build.properties
+++ b/app/walkandplay/trunk/build.properties
@@ -6,9 +6,10 @@ project.id=walkandplay
 version=1.0.0
 
 # specify the directory for your (tomcat) webapps
-deploy.local.dir=/var/keyworx/webapps/test.walkandplay.com
-deploy.live.dir=/Volumes/homes/httpd/walkandplay.com
-deploy.test.dir=keyworx@test.waag.org:/var/keyworx/webapps/test.walkandplay.com
+deploy.local.dir=/var/keyworx/webapps/walkandplay
+deploy.test.dir=/var/keyworx/webapps/walkandplay
+deploy.test.server=keyworx@test.walkandplay.com
+
 
 
 
