--- a/app/walkandplay/trunk/client/web/build.properties
+++ b/app/walkandplay/trunk/client/web/build.properties
@@ -1,11 +1,8 @@
 # $Id$
 
 # project props
-project.name=WalkAndPlay
-project.id=wpweb
-product.name=wpweb
-
-project.version=1.0.0
+component.id=web
+component.version=1.0.0
 
 
 
